--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -37,4 +40,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation("com.github.terrakok:cicerone:7.0")
+    implementation "androidx.fragment:fragment-ktx:1.3.3"
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.4.4'
 }
